Zaktualizowanie plikow, dostosowanie się do poleceń Łukasza, naprawa podstawowych błędów